fixed stats + stats contrast + balanced cards

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -5,7 +5,7 @@
 $color-blue: #160F29;
 $color-light-brown: #8c7a4f;
 $color-lighter-brown: #bda867;
-$color-yellow: #f8f5bf;
+$color-light-green: #29a79c;
 
 $color-light-grey: #A9ACA9;
 $color-dark-grey: #333333;
